--- a/wp-content/themes/wphetic/style.css
+++ b/wp-content/themes/wphetic/style.css
@@ -4,3 +4,71 @@ Author: Groupe
 Description: theme pour marmishlag
 Version: 1.0
 */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
+body {
+    margin: 0;
+}
+
+h2 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 36px;
+    text-transform: uppercase;
+}
+
+.d-f {
+    display: flex;
+}
+
+.header {
+    background-color: #B795FE;
+    padding: 2rem 2rem 10rem 5rem;
+    padding-bottom: 10rem;
+}
+
+.infos_container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: -8rem;
+}
+
+.infos_container .first, .infos_container .second {
+    flex-basis: 30%;
+    background-color: #ffffff;
+}
+
+.infos_container .first {
+    padding: 1.5rem;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.first p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    margin: 0;
+}
+
+.details {
+    justify-content: space-between;
+}
+
+.details p {
+    text-align: center;
+}
+
+.first li {
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+}
+
+
+.item {
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: .25rem .5rem;
+    margin-right: .5rem;
+}
