--- a/wp-content/themes/wphetic/style.css
+++ b/wp-content/themes/wphetic/style.css
@@ -4,3 +4,129 @@ Author: Groupe
 Description: theme pour marmishlag
 Version: 1.0
 */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
+body {
+    margin: 0;
+}
+
+h2 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 36px;
+    text-transform: uppercase;
+    margin-bottom: 0;
+}
+
+h3 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 26px;
+    text-transform: uppercase;
+}
+
+.pl-5 {
+    padding-left: 5rem;
+}
+
+.pr-5 {
+    padding-right: 5rem;
+}
+
+.d-f {
+    display: flex;
+}
+
+.header {
+    background-color: #B795FE;
+    padding: 2rem 2rem 10rem 5rem;
+    padding-bottom: 10rem;
+}
+
+.infos_container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: -8rem;
+}
+
+.infos_container .first, .infos_container .second {
+    flex-basis: 30%;
+    background-color: #ffffff;
+}
+
+.infos_container .first {
+    padding: 1.5rem;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.first p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    margin: 0;
+}
+
+.details {
+    justify-content: space-between;
+    margin-bottom: 0.5rem;
+}
+
+.details p {
+    text-align: center;
+}
+
+.details p span{
+    font-size: 16px;
+}
+
+.first li {
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+}
+
+.second img {
+    width: 100%;
+}
+
+.preparation ul {
+    list-style: none;
+}
+
+.preparation li {
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.preparation li span {
+    box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 50px;
+    height: 50px;
+    margin-right: 1rem;
+    flex-basis: 5%;
+}
+
+
+.item {
+    font-family: 'Poppins', sans-serif;
+    font-size: 11px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background-color: #ffffff;
+    border-radius: 5px;
+    padding: .25rem .5rem;
+    margin: 0 .5rem 0 0;
+}
+
+.date{
+    font-family: 'Poppins', sans-serif;
+    margin-top: 3rem;
+}
