--- a/wp-content/themes/wphetic/style.css
+++ b/wp-content/themes/wphetic/style.css
@@ -294,3 +294,97 @@ ul::-webkit-scrollbar-button {
     font-size: 18px;
     margin-left: 1rem;
 }
+
+.container{
+    width: 100vw;
+    height: calc(100vh - 80px);
+    display: flex;
+    margin-top: 80px;
+}
+
+.container__left{
+    background-image: url("assets/pancakemiam.png");
+    height: 100%;
+    flex-basis: 50%;
+
+}
+
+.container__right{
+    height: 100%;
+    flex-basis: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.right__login{
+    width: 80%;
+    height: calc(90%);
+}
+
+.login__title{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 36px;
+}
+
+.login__input{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Poppins', sans-serif;
+}
+
+.login__input label{
+    margin-bottom: 30px;
+}
+
+.login__input input{
+    width: 80%;
+    border: none;
+    background-color: #ECECEC;
+    height: 46px;
+    border-radius: 11px;
+    font-family: 'Poppins', sans-serif;
+    outline: none;
+}
+.login__remember{
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+}
+.login__remember input{
+    width: 42px;
+    height: 42px;
+    box-sizing: 0px;
+}
+
+.login__remember label{
+    margin-left: 20px;
+}
+
+.login__submit{
+    margin-top: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+
+.submit{
+    width: 60%;
+    height: 64px;
+    border: none;
+    background-color: #B795FE;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 36px;
+    border-radius: 11px;
+}
+
+.error{
+    font-family: 'Poppins', sans-serif;
+}
