--- a/wp-content/themes/wphetic/style.css
+++ b/wp-content/themes/wphetic/style.css
@@ -63,6 +63,8 @@ h3 {
 .infos_container .first, .infos_container .second {
     flex-basis: 35%;
     background-color: #ffffff;
+    border-radius: 5px;
+    overflow: hidden;
 }
 
 .infos_container .first {
@@ -260,14 +262,16 @@ ul::-webkit-scrollbar-button {
 }
 
 .post_ctn {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 300px));
+    grid-auto-rows: minmax(250px, 350px);
+    justify-content: center;
+    gap: 1.5rem;
 }
 
 .post_card {
     position: relative;
-    flex-basis: 30%;
+    /* flex-basis: 30%; */
     overflow: hidden;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
