--- a/wp-content/themes/wphetic/style.css
+++ b/wp-content/themes/wphetic/style.css
@@ -150,10 +150,33 @@ h3 {
     margin: 0 .5rem 0 0;
 }
 
-.date{
+.date {
     font-family: 'Poppins', sans-serif;
     margin-top: 3rem;
 }
+
+.rate {
+    display: flex;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.rate__block--active {
+    background-color: #FFA800;
+    border: 0px;
+}
+
+.rate__block {
+    height: 15px;
+    width: 15px;
+    margin-left: 0.5rem;
+    border-radius: 50%;
+    border: 1px solid #FFA800;
+}
+
+
 
 /* HEADER */
 
